<resources>
    <string name="app_name">UserSystem</string>

    <!-- common Test -->
    <string name="submitBtn">Submit</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="updateBtn">Update</string>

    <!-- Register User Activity -->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="retypePassword">Retype Password</string>
    <string name="takePicture">Take Picture</string>
    <string name="title_activity_login_user">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <!-- Login USer Activity -->
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="loginFailed">Login failed</string>

    <!-- User Info Activity -->
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="oldPasswordWrong">Old Password Wrong</string>
    <string name="attachmentList">Attachment List</string>
    <string name="scanner">Scanner</string>


    <!-- Scanner Activity -->
    <string name="upload">Upload</string>
    <string name="scanText">Scan Text</string>
    <string name="reScan">Re Scan</string>
</resources>
