<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        tools:context=".Activity.ScannerActivity">

        <RelativeLayout
            android:id="@+id/scannerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <Button
            android:id="@+id/reSCanBTN"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/reScan"
            android:textSize="@dimen/fieldFontSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scanText"
                android:textSize="@dimen/fieldFontSize"/>
            <TextView
                android:id="@+id/scanTextValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="@integer/editTextMaxLength"
                android:textSize="@dimen/fieldFontSize"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/exportFormatRDOGRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </RadioGroup>

        <Button
            android:id="@+id/uploadBTN"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/upload"
            android:textSize="@dimen/fieldFontSize" />


    </LinearLayout>

    <ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:visibility="gone"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</RelativeLayout>